--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1>CivictechAppCatalog</h1>
+    Civictech で生まれたアプリのカタログページを作成します。プルリクベースでやる予定。
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
